Closed Bug 1724061 Opened 3 years ago Closed 3 years ago

Calling ServiceWorkerManager propagateUnregister after that "profile-before-change-qm" has been notified should not trigger a crash

Categories

(Core :: DOM: Service Workers, defect)

defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox93 --- fixed

People

(Reporter: rpl, Assigned: rpl)

Details

Attachments

(1 file)

We noticed this because it got triggered by a failing xpcshell test, see this comment on the phabricator revision D121671 for more details about how the crash was triggered from the xpcshell test included in that patch.

I'm not yet 100% sure that ServiceWorkerCleanUp.removeFromPrincipal would be triggering it outside of an xpcshell test and in a real world scenario, and so I was tempted to mark this issue as a task instead of a defect, but even if at the moment there isn't a non-artificial way to trigger it in a real browser instance, ServiceWorkerManager::PropagateUnregister could still explicitly check that mActor and return earlier with an explicit error if the mActor RefPtr has been already nullified (or not yet set).

Assignee: nobody → lgreco
Status: NEW → ASSIGNED
Pushed by luca.greco@alcacoop.it: https://hg.mozilla.org/integration/autoland/rev/8c8bf44efee0 Make ServiceWorkerManager::PropagateUnregister to return earlier with an error if mActor is not set. r=asuth
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: