Bug 1724061 - Make ServiceWorkerManager::PropagateUnregister to return earlier with an error if mActor is not set. r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D121771